align user icons and fix highlight and cursor on login, logout signup tabs

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -22,12 +22,11 @@
 	padding: 3%;
 	text-align: center;
 	font-family: Avenir;
-	
 }
 
 .userIcon{
 	cursor: pointer; 
-	cursor: hand;
+	
 }
 
 .avenir{
@@ -115,3 +114,20 @@
 body{
 	padding-bottom: 50px;
 }
+
+a.dropdown-toggle.head {
+	padding-bottom: 35px;
+}
+
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display: inline-block;
+    float: none;
+    /* reset the text-align */
+    /* inline-block space fix */
+}
+
+
+
